crates/stayhydated-dioxus-core/tests/ui/button_variant_string.stderr
error[E0308]: mismatched types
 --> tests/ui/button_variant_string.rs:4:28
  |
4 |     let _: ButtonVariant = "primary";
  |            -------------   ^^^^^^^^^ expected `ButtonVariant`, found `&str`
  |            |
  |            expected due to this
