crates/stayhydated-dioxus-core/tests/ui/button_variant_string.rs
use stayhydated_dioxus_core::ButtonVariant;

fn main() {
    let _: ButtonVariant = "primary";
}
